# DiceMaster_Central

./: .gitignore  .gitmodules  CMakeLists.txt  MPU.py  README.md  colcon.defaults.json  comm.py  config.py  dice.py  environment.yml  file_loader.py  files.py  imu_data_20250710_171503.npz  main.py  package.xml  requirements.txt  sensor.py  sensors.py  setup.py  strategies.py  studio.py  utils.py
DiceMaster_Central/: bus.py  file_loader.py  imu.py  protocol.py  screen.py  utils.py
DiceMaster_Central/config/: constants.py  dice_config.py
DiceMaster_Central/data/: media_types.py  protocol.py
DiceMaster_Central/hw/: __init__.py  battery.py  chassis.py  imu.py  imu_processor.py  motion_detector.py  screen.py  screen_bus_manager.py  screen_manager.py  screen_media_service.py  screen_node.py  spi_device.py  usb_connector_checker.py
DiceMaster_Central/managers/: notifications.py
DiceMaster_Central/media/: file_loader.py  media_types.py
DiceMaster_Central/media_typing/: media_types.py  protocol.py
DiceMaster_Central/strategies/: strategy_manager.py
DiceMaster_Central/strategies/random_time/: random_time_strategy.py
DiceMaster_Central/utils/: __init__.py  notification_helper.py  ring_buffer.py
archive/: screen.py  strategy.py  utils.py
dicemaster_central/: package.xml  setup.py
dicemaster_central/dicemaster_central/: __init__.py  config.py  constants.py
dicemaster_central/dicemaster_central/games/: game.py  strategy.py
dicemaster_central/dicemaster_central/hw/: __init__.py  chassis.py  energy.py  orientation_math.py  usb_connector.py
dicemaster_central/dicemaster_central/managers/: __init__.py  dataset_loader.py  file_manager.py  game_manager.py  menu_manager.py  notifications.py  strategy_manager.py
dicemaster_central/dicemaster_central/media_typing/: media_types.py  protocol.py
dicemaster_central/dicemaster_central/strategies/: base_strategy.py
dicemaster_central/dicemaster_central/utils/: __init__.py  data_loader.py  kalman_filter.py  notification_builder.py  notification_helper.py  remote_logger.py
dicemaster_central/docs/: notification_system.md  remote_logger.md  screen_rotation.md
dicemaster_central/docs/user_guides/: strategy.md
dicemaster_central/launch/: chassis.launch.py  dicemaster.launch.py  imu.launch.py  launch_chassis.py  launch_dataset_loader.py  launch_imu.py  launch_notification_manager.py  managers.launch.py  remote_logger.launch.py  screens.launch.py
dicemaster_central/resource/: config.yaml  dice.urdf  dice.urdf.xacro  dice_visualization.rviz  screen_component.urdf.xacro
dicemaster_central/scripts/: auto_start.readme.md  dataset_consumer_example.py  dataset_manager.py  start_dicemaster.sh  urdf_to_dice_config.py
dicemaster_central/tests/: launch_screen_test.py  test_chassis_orientation.py  test_dataset_loader.py  test_imu_data_recording.py  test_imu_reading.py  test_notifications.py  test_orientation_math.py  test_protocol.py  test_screen.py  test_spi.py  test_spi2.py
dicemaster_central/tests/test_assets/: hey_guys.json  text2.json  text3.json
dicemaster_central_msgs/: CMakeLists.txt  README.md
dicemaster_central_msgs/msg/: RawIMU.msg  ScreenPose.msg
dicemaster_cpp/: package.xml
dicemaster_cpp/launch/: cpp_benchmark.launch.py
dicemaster_cpp/src/: chassis_node.cpp  imu_hardware_node.cpp
docs/: cpu-optimization-log.md  dataset_management.md  developer_guide.md  imu_implementation.md  setup.md
docs/api/: architecture.md  motion_detection.md
docs/architecture/: node-graph.md
docs/configure/: auto_start.readme.md
docs/decisions/: 001-ros2-node-per-screen-bus.md  002-strategy-pattern-for-games.md  003-symlink-install.md
docs/plans/: 2026-03-09-chassis-orientation-integration.md  2026-03-09-tf2-free-chassis.md
docs/runbooks/: deploy.md  local-dev.md
docs/setup/: dev_setup.md  rpi_setup.md
docs/superpowers/specs/: 2026-03-11-docs-restructure-design.md
environment/: conda_environment.yml  dice-conda.yml
examples/: enhanced_menu_with_notifications.py
launch/: README.md  launch_config_pub.py  launch_dice.py  launch_notification_manager.py  launch_remote_logger.py
module/: comm.py  media_processor.py  trigger.py
modules/: comm.py  config.py  const.py  file_loader.py  media_processor.py  screen.py  sensor.py  strategy.py  trigger.py
msg/: DatasetInfo.msg  IMUCalibration.msg  IMUPose.msg  NotificationRequest.msg  NotificationResponse.msg  README.md  ScreenMediaCmd.msg
requirements/: apt_requirements.txt  conda_environment.yml
resource/: config.yaml  rpi_hw_config.md
ros_ws/: colcon.defaults.json
rviz/: env.yaml
scripts/: apt_requirements.txt  build_ros_from_source.sh  desktop_conda_environment.yml  dice_init.sh  dice_pip_requirements.txt  init.sh  screen_node.py  sd_auto_mount.sh  setup_workspace.sh  start_dicemaster.sh  test_screen.py  time_update.py
src/dice/: package.xml  setup.cfg  setup.py
src/dice/dice/: __init__.py  _log.py  _runtime.py  assets.py  motion.py  orientation.py  screen.py  strategy.py  timer.py
src/dice/tests/: conftest.py  test_assets.py  test_integration.py  test_log.py  test_motion.py  test_orientation.py  test_runtime.py  test_screen.py  test_strategy.py  test_timer.py
src/dicemaster_central/: env.yaml  package.xml  setup.cfg  setup.py
src/dicemaster_central/dicemaster_central/: config.py
src/dicemaster_central/launch/: imu.launch.py
src/dicemaster_central_msgs/: CMakeLists.txt  package.xml
src/dicemaster_cpp/: CMakeLists.txt
src/dicemaster_cpp/include/dicemaster_cpp/: dice_orientation.hpp
src/dicemaster_cpp/launch/: cpp_benchmark.launch.py
src/dicemaster_cpp/src/: dice_orientation.cpp  imu_hardware_node.cpp  screen_bus_node.cpp
srv/: SendNotification.srv
tests/: imu_data_comparison_20250710_174612.npz  imu_data_comparison_20250710_175232.npz  test_chassis.py  test_chassis_motion.py  test_chassis_tf2_removal.py  test_config.py  test_imu.py  test_imu_data_recording.py  test_imu_reading.py  test_protocol.py  test_remote_logger.py  test_spi.py
(+54 files in other folders)
