<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dicemaster_cpp</name>
  <version>1.0.0</version>
  <description>C++ nodes for DiceMaster (IMU hardware + chassis)</description>

  <maintainer email="shapirodesignlab@umich.edu">DiceMaster Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dicemaster_central_msgs</depend>
  <depend>ament_index_cpp</depend>

  <build_depend>eigen</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
